--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <nav class="header__menu">
       <ul class="header__links-list">
         <li class="header__links-list-item header__links-list-item_no-bullet">
-          <a href="#" class="header__link header__link_active">главная</a>
+          <a href="#" class="header__linkheader__link_active">главная</a>
         </li>
         <li class="header__links-list-item">
           <a href="#" class="header__link">посмотреть лоты</a>
@@ -30,9 +30,9 @@
     </a>
     <address class="address header__address">
       <!-- Добавление префиксов для ссылок на номер телефона и почту -->
-      <a href="tel:+99995555555">+9 999 555 5555</a>
+      <a href="tel:+99995555555">+9 999 555 5555</a><br>
       <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p>наб. Принсенграхт 263-265, Амстердам</p>
+      <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
     </address>
   </header>
 
@@ -112,15 +112,15 @@
       <div class="about__column">
         <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
-          <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата.
-            Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
-            или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
+          <p>Здесь вы не встретите очередное пафосное собрание невероятно<br>дорогого антиквариата.
+            Наши лоты вообще не должны были попасть<br>ни на один аукцион. Потому что кому нужен дневник девочки-<br>подростка
+            или картина, которую может нарисовать даже ребёнок?<br>Кому нужны все эти странные вещи, созданные любителями?
           </p>
-          <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время.
-            В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными.
-            Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
-            современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели.
-            И сейчас эти лоты стали культовыми.</p>
+          <p>Слишком сложные или, наоборот, слишком простые. Опережающие<br>своё время.
+            В пух и прах растерзанные критиками. Непринятые и<br>непонятые. Когда-то они казались просто неудачными.
+            Но, несмотря<br>на критику, кажущуюся простоту или сложность, сейчас без этих лотов<br>невозможно представить
+            современную культуру. Когда в эти вещи не<br>верил никто, продолжали верить их создатели.
+            И сейчас эти лоты<br>стали культовыми.</p>
         </div>
       </div>
     </section>
