--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -31,7 +32,7 @@
     <address class="address header__address">
       <!-- Добавление префиксов для ссылок на номер телефона и почту -->
       <a href="tel:+99995555555">+9 999 555 5555</a><br>
-      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
       <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
     </address>
   </header>
@@ -113,12 +114,15 @@
         <h2 class="about__title">Об аукционе</h2>
         <div class="about__text">
           <p>Здесь вы не встретите очередное пафосное собрание невероятно<br>дорогого антиквариата.
-            Наши лоты вообще не должны были попасть<br>ни на один аукцион. Потому что кому нужен дневник девочки-<br>подростка
-            или картина, которую может нарисовать даже ребёнок?<br>Кому нужны все эти странные вещи, созданные любителями?
+            Наши лоты вообще не должны были попасть<br>ни на один аукцион. Потому что кому нужен дневник
+            девочки-<br>подростка
+            или картина, которую может нарисовать даже ребёнок?<br>Кому нужны все эти странные вещи, созданные
+            любителями?
           </p>
           <p>Слишком сложные или, наоборот, слишком простые. Опережающие<br>своё время.
             В пух и прах растерзанные критиками. Непринятые и<br>непонятые. Когда-то они казались просто неудачными.
-            Но, несмотря<br>на критику, кажущуюся простоту или сложность, сейчас без этих лотов<br>невозможно представить
+            Но, несмотря<br>на критику, кажущуюся простоту или сложность, сейчас без этих лотов<br>невозможно
+            представить
             современную культуру. Когда в эти вещи не<br>верил никто, продолжали верить их создатели.
             И сейчас эти лоты<br>стали культовыми.</p>
         </div>
