--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
   </a>
   <address class="address header__address">
     <!-- Добавление префиксов для ссылок на номер телефона и почту -->
-    <a href="tel:+99995555555">+9 999 555 5555</a><br>
-    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-    <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+    <a href="tel:+99995555555">+9 999 555 5555</a>
+    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+    <p>наб. Принсенграхт 263-265, Амстердам</p>
   </address>
 </header>
 
@@ -136,9 +136,9 @@
 
 <footer class="footer">
   <address class="address footer__address">
-    <a href="tel:+99995555555">+9 999 555 5555</a><br>
-    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
-    <p>наб. Принсенграхт 263-<br>265, Амстердам</p>
+    <a href="tel:+99995555555">+9 999 555 5555</a>
+    <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+    <p>наб. Принсенграхт 263-265, Амстердам</p>
   </address>
   <nav class="footer__menu">
     <ul class="footer__menu-list">
