--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
 
 <footer class="footer">
   <address class="address footer__address">
+  <div class="address-contents">
     <a href="tel:+99995555555">+9 999 555 5555</a>
     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
     <p>наб. Принсенграхт 263-265, Амстердам</p>
+  </div>
   </address>
   <nav class="footer__menu">
     <ul class="footer__menu-list">
