--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
           Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка
           или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
         </p>
-        <p class="about__text_p2">Слишком сложные или, наоборот, слишком простые. &nbsp;Опережающие своё время. В пух и
-          прах растерзанные критиками. &nbsp;Непринятые и непонятые. &nbsp;Когда-то они казались просто неудачными. Но,
+        <p class="about__text_p2">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и
+          прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но,
           несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить
           современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали
           культовыми.</p>
