--- a/index.html
+++ b/index.html
@@ -124,14 +124,14 @@
       </div>
       <div class="about__column">
         <h2 class="about__title">Об аукционе</h2>
-        <p class="about__text_a">
+        <p class="about__text_up">
           Здесь вы не встретите очередное пафосное собрание невероятно
           дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
           один аукцион. Потому что кому нужен дневник девочки-подростка или
           картина, которую может нарисовать даже ребёнок? Кому нужны все эти
           странные вещи, созданные любителями?
         </p>
-        <p class="about__text_b">
+        <p class="about__text_down">
           Слишком сложные или, наоборот, слишком простые. Опережающие своё
           время. В пух и прах растерзанные критиками. Непринятые и непонятые.
           Когда-то они казались просто неудачными. Но, несмотря на критику,
